Fixed env variables used for building rpms in master and 3.6 upgrade jobs
Change-Id: I8406461bb26b1755dcb1e7193d9f55c178f523d9
Signed-off-by: Sharon Naftaly <snaftaly@redhat.com>